<resources>
    <string name="app_name">wine_app</string>
    <string name="title">Breckenridge Wine Festival</string>
    <string name="ticket_link">Tickets <a href="http://www.yahoo.com"></a></string>
    <string name="contains_links">Map <a href="http://www.google.com"></a></string>
    <string name="Favorites">Favorties</string>
    <string name="Map">Map</string>
    <string name="FAQ">FAQ</string>
    <string name="Wine">Wine</string>
    <string name="Events">Events</string>
    <string name="events">Events</string>
    <string name="winelist">Full Wine List</string>
    <string name="result_text_default">Please focus camera on QR Code</string>
    <string name="search_view">search_view</string>
</resources>



